--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -10,6 +8,8 @@ services:
     working_dir: /var/www
     volumes:
       - ./:/var/www
+      - /var/www/vendor
+      - /var/www/node_modules
       - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - laravel_network
@@ -25,6 +25,8 @@ services:
     working_dir: /var/www
     volumes:
       - ./:/var/www
+      - /var/www/vendor
+      - /var/www/node_modules
       - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - laravel_network
@@ -40,6 +42,8 @@ services:
       - "8000:80"
     volumes:
       - ./:/var/www
+      - /var/www/vendor
+      - /var/www/node_modules
       - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
     networks:
       - laravel_network
@@ -51,10 +55,9 @@ services:
     container_name: laravel_db
     restart: unless-stopped
     environment:
-      MYSQL_DATABASE: laravel
-      MYSQL_ROOT_PASSWORD: your_mysql_root_password
-      MYSQL_PASSWORD: your_mysql_password
-      MYSQL_USER: laravel_user
+      MYSQL_DATABASE: mydictionary
+      MYSQL_ROOT_PASSWORD: kenarceo
+      MYSQL_PASSWORD: kenarceo
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
     ports:
